--- a/wiki/fr/TechDraw_GeometricHatch.html
+++ b/wiki/fr/TechDraw_GeometricHatch.html
@@ -1,7 +1,7 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">TechDraw GeometricHatch/fr</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="fr" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-TechDraw+GeometricHatch&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
 <li><a href="../de/TechDraw_GeometricHatch.html" class="mw-pt-progress mw-pt-progress--complete" title="TechDraw GeometrischeSchraffur (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../TechDraw_GeometricHatch.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="TechDraw GeometricHatch (100% translated)" lang="en" dir="ltr">English</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="fr" dir="ltr">fran&ccedil;ais</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="fr" dir="ltr">fran&ccedil;ais</span></li>
 <li><a href="../it/TechDraw_GeometricHatch.html" class="mw-pt-progress mw-pt-progress--med" title="TechDraw: Tratteggio geometrico (67% translated)" lang="it" dir="ltr">italiano</a></li>
 <li><a href="../pl/TechDraw_GeometricHatch.html" class="mw-pt-progress mw-pt-progress--complete" title="Rysunek Techniczny: Kreskowanie geometryczne (100% translated)" lang="pl" dir="ltr">polski</a></li>
 <li><a href="../ru/TechDraw_GeometricHatch.html" class="mw-pt-progress mw-pt-progress--med" title='TechDraw "&#1055;&#1088;&#1080;&#1084;&#1077;&#1085;&#1080;&#1090;&#1100; &#1075;&#1077;&#1086;&#1084;&#1077;&#1090;&#1088;&#1080;&#1095;&#1077;&#1089;&#1082;&#1091;&#1102; &#1096;&#1090;&#1088;&#1080;&#1093;&#1086;&#1074;&#1082;&#1091; &#1082; &#1075;&#1088;&#1072;&#1085;&#1080;" (44% translated)' lang="ru" dir="ltr">&#1088;&#1091;&#1089;&#1089;&#1082;&#1080;&#1081;</a></li>
@@ -99,10 +99,8 @@
 <span class="n">hatch</span><span class="o">.</span><span class="n">NamePattern</span> <span class="o">=</span> <span class="s2">"Diamond"</span>
 <span class="n">page</span><span class="o">.</span><span class="n">addView</span><span class="p">(</span><span class="n">hatch</span><span class="p">)</span>
 </pre></div>
-<div class="mw-translate-fuzzy">
 <p>Il est &eacute;galement possible d'utiliser le moteur de hachures g&eacute;om&eacute;triques de TechDraw pour produire un objet compos&eacute; dans l'espace 3D. Il faut faire attention que la face de base se trouve sur le plan XY, car l'algorithme n'est pas encore adapt&eacute; aux autres cas&nbsp;:
 </p>
-</div>
 <div class="mw-highlight mw-highlight-lang-python mw-content-ltr" dir="ltr"><pre><span></span><span class="kn">import</span> <span class="nn">TechDraw</span>
 <span class="n">face</span> <span class="o">=</span> <span class="n">Part</span><span class="o">.</span><span class="n">makePlane</span><span class="p">(</span><span class="mi">10</span><span class="p">,</span> <span class="mi">10</span><span class="p">)</span>
 <span class="n">patfile</span> <span class="o">=</span> <span class="s2">"path/to/myPATfile.pat"</span>
@@ -158,35 +156,35 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260124111731
+Cached time: 20260124111739
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.097 seconds
-Real time usage: 0.129 seconds
-Preprocessor visited node count: 683/1000000
+CPU time usage: 0.099 seconds
+Real time usage: 0.131 seconds
+Preprocessor visited node count: 682/1000000
 Post&#8208;expand include size: 27703/2097152 bytes
 Template argument size: 10751/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 5/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 5447/5000000 bytes
+Unstrip post&#8208;expand size: 5451/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   36.773      1 -total
- 20.55%    7.558      1 Template:TechDraw_Tools_navi/fr
- 13.59%    4.997      2 Template:Navigation_menu_2
- 13.18%    4.847      4 Template:PropertyData
-  9.89%    3.636      6 Template:Variable
-  8.83%    3.248      1 Template:Userdocnavi/fr
-  8.80%    3.235      4 Template:Code
-  8.42%    3.096      2 Template:PropertyView
-  7.29%    2.682      2 Template:Docnav/fr
-  6.53%    2.401      1 Template:GuiCommand/fr
+100.00%   35.778      1 -total
+ 18.11%    6.480      1 Template:TechDraw_Tools_navi/fr
+ 12.06%    4.316      4 Template:PropertyData
+ 11.76%    4.206      2 Template:Navigation_menu_2
+ 10.54%    3.770      4 Template:Code
+  8.47%    3.029      6 Template:Variable
+  8.20%    2.935      2 Template:PropertyView
+  7.20%    2.575      1 Template:Userdocnavi/fr
+  6.53%    2.335      2 Template:Docnav/fr
+  6.42%    2.296      1 Template:GuiCommand/fr
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:180800-0!canonical and timestamp 20260124111731 and revision id 1743320. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:180800-0!canonical and timestamp 20260124111739 and revision id 1743322. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
