--- a/wiki/fr/TechDraw_WeldSymbol.html
+++ b/wiki/fr/TechDraw_WeldSymbol.html
@@ -14,7 +14,6 @@
     <div><a href="../fr/TechDraw_Workbench.html" title="TechDraw Workbench/fr">Atelier TechDraw</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Workbench_TechDraw.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
 </div>
-<div class="mw-translate-fuzzy">
 <table class="fcinfobox wikitable ct" width="100%" style="float: right; width: 230px; margin-left: 1em">
 <tbody><tr>
 <td class="ctTitle" style="font-weight: bold; font-size: 125%;">
@@ -25,7 +24,7 @@
 <th class="ctOdd">Emplacement du menu
 </th></tr>
 <tr>
-<td class="ctEven">TechDraw &rarr; Symboles &rarr; Ins&eacute;rer des informations de soudage
+<td class="ctEven">TechDraw &rarr; Symboles &rarr; Informations de soudage
 </td></tr>
 <tr>
 <th class="ctOdd">Ateliers
@@ -54,7 +53,6 @@
 <tr>
 <td class="ctToc"><br><meta property="mw:PageProp/toc">
 </td></tr></tbody></table>
-</div>
 <h2><span class="mw-headline" id="Description">Description</span></h2>
 <p>L'outil <b>TechDraw Soudage</b> ajoute les sp&eacute;cifications de soudage &agrave; une ligne directrice existante.
 </p><p><span typeof="mw:File"><a href="../index.php?title=TechDraw_WeldingSymbol_example.png&amp;filetimestamp=20190906214617&amp;.html" class="mw-file-description"><img src="../File/TechDraw_WeldingSymbol_example.png" decoding="async" width="330" height="190" class="mw-file-element" data-file-width="568" data-file-height="327"></a></span>
@@ -188,15 +186,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260124111846
+Cached time: 20260124112128
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.084 seconds
-Real time usage: 0.128 seconds
-Preprocessor visited node count: 821/1000000
-Post&#8208;expand include size: 28842/2097152 bytes
-Template argument size: 11500/2097152 bytes
+CPU time usage: 0.103 seconds
+Real time usage: 0.152 seconds
+Preprocessor visited node count: 820/1000000
+Post&#8208;expand include size: 28816/2097152 bytes
+Template argument size: 11474/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 2/100
 Unstrip recursion depth: 0/20
@@ -204,19 +202,19 @@ Unstrip post&#8208;expand size: 6996/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   31.362      1 -total
- 19.77%    6.202     12 Template:PropertyData
- 19.36%    6.070      1 Template:TechDraw_Tools_navi/fr
- 13.91%    4.361      2 Template:Navigation_menu_2
- 13.66%    4.284      1 Template:Userdocnavi/fr
- 12.00%    3.762     12 Template:Variable
-  9.40%    2.947      1 Template:GuiCommand/fr
-  9.00%    2.822      1 Template:Code
-  7.84%    2.458      1 Template:Caption
-  7.05%    2.212      2 Template:Docnav/fr
+100.00%   34.895      1 -total
+ 21.93%    7.651      1 Template:TechDraw_Tools_navi/fr
+ 20.00%    6.980     12 Template:PropertyData
+ 17.62%    6.147      2 Template:Navigation_menu_2
+ 12.79%    4.464     12 Template:Variable
+ 12.08%    4.217      1 Template:Userdocnavi/fr
+ 10.85%    3.785      2 Template:Docnav/fr
+  8.03%    2.803      1 Template:GuiCommand/fr
+  7.49%    2.615      1 Template:Code
+  5.87%    2.049      1 Template:Caption
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:156944-0!canonical and timestamp 20260124111845 and revision id 1743326. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:156944-0!canonical and timestamp 20260124112128 and revision id 1743328. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
