--- a/wiki/fr/TechDraw_WeldSymbol.html
+++ b/wiki/fr/TechDraw_WeldSymbol.html
@@ -54,7 +54,7 @@
 <td class="ctToc"><br><meta property="mw:PageProp/toc">
 </td></tr></tbody></table>
 <h2><span class="mw-headline" id="Description">Description</span></h2>
-<p>L'outil <b>TechDraw Soudage</b> ajoute les sp&eacute;cifications de soudage &agrave; une ligne directrice existante.
+<p>L'outil <b>TechDraw Soudage</b> ajoute les sp&eacute;cifications de soudage &agrave; une ligne de rep&egrave;re existante.
 </p><p><span typeof="mw:File"><a href="../index.php?title=TechDraw_WeldingSymbol_example.png&amp;filetimestamp=20190906214617&amp;.html" class="mw-file-description"><img src="../File/TechDraw_WeldingSymbol_example.png" decoding="async" width="330" height="190" class="mw-file-element" data-file-width="568" data-file-height="327"></a></span>
 </p>
 <p style="text-align:left; font-style:italic; max-width:800px; box-sizing:border-box; margin-block:1em; margin-inline:clamp(1em, 6vw, 2em); padding-inline:clamp(0.75em, 4vw, 2em); word-break:normal; overflow-wrap:break-word;">Sp&eacute;cification de soudage ajout&eacute;e &agrave; une ligne de rep&egrave;re</p>
@@ -186,12 +186,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260124112128
+Cached time: 20260124112331
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.103 seconds
-Real time usage: 0.152 seconds
+CPU time usage: 0.106 seconds
+Real time usage: 0.151 seconds
 Preprocessor visited node count: 820/1000000
 Post&#8208;expand include size: 28816/2097152 bytes
 Template argument size: 11474/2097152 bytes
@@ -202,19 +202,19 @@ Unstrip post&#8208;expand size: 6996/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   34.895      1 -total
- 21.93%    7.651      1 Template:TechDraw_Tools_navi/fr
- 20.00%    6.980     12 Template:PropertyData
- 17.62%    6.147      2 Template:Navigation_menu_2
- 12.79%    4.464     12 Template:Variable
- 12.08%    4.217      1 Template:Userdocnavi/fr
- 10.85%    3.785      2 Template:Docnav/fr
-  8.03%    2.803      1 Template:GuiCommand/fr
-  7.49%    2.615      1 Template:Code
-  5.87%    2.049      1 Template:Caption
+100.00%   48.450      1 -total
+ 23.15%   11.215      1 Template:TechDraw_Tools_navi/fr
+ 19.59%    9.492     12 Template:PropertyData
+ 14.91%    7.224      2 Template:Navigation_menu_2
+ 12.31%    5.964     12 Template:Variable
+ 10.99%    5.326      1 Template:Userdocnavi/fr
+  8.21%    3.980      1 Template:GuiCommand/fr
+  7.93%    3.843      1 Template:Code
+  7.59%    3.679      2 Template:Button
+  6.63%    3.210      2 Template:Docnav/fr
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:156944-0!canonical and timestamp 20260124112128 and revision id 1743328. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:156944-0!canonical and timestamp 20260124112331 and revision id 1743330. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
