--- a/wiki/fr/TechDraw_WeldSymbol.html
+++ b/wiki/fr/TechDraw_WeldSymbol.html
@@ -24,7 +24,7 @@
 <th class="ctOdd">Emplacement du menu
 </th></tr>
 <tr>
-<td class="ctEven">TechDraw &rarr; Symboles &rarr; Informations de soudage
+<td class="ctEven">TechDraw &rarr; Symboles &rarr; Symboles et informations de soudage
 </td></tr>
 <tr>
 <th class="ctOdd">Ateliers
@@ -186,15 +186,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260124112331
+Cached time: 20260124112438
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.106 seconds
-Real time usage: 0.151 seconds
+CPU time usage: 0.096 seconds
+Real time usage: 0.131 seconds
 Preprocessor visited node count: 820/1000000
-Post&#8208;expand include size: 28816/2097152 bytes
-Template argument size: 11474/2097152 bytes
+Post&#8208;expand include size: 28840/2097152 bytes
+Template argument size: 11498/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 2/100
 Unstrip recursion depth: 0/20
@@ -202,19 +202,19 @@ Unstrip post&#8208;expand size: 6996/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   48.450      1 -total
- 23.15%   11.215      1 Template:TechDraw_Tools_navi/fr
- 19.59%    9.492     12 Template:PropertyData
- 14.91%    7.224      2 Template:Navigation_menu_2
- 12.31%    5.964     12 Template:Variable
- 10.99%    5.326      1 Template:Userdocnavi/fr
-  8.21%    3.980      1 Template:GuiCommand/fr
-  7.93%    3.843      1 Template:Code
-  7.59%    3.679      2 Template:Button
-  6.63%    3.210      2 Template:Docnav/fr
+100.00%   28.695      1 -total
+ 23.14%    6.641     12 Template:PropertyData
+ 21.67%    6.219      1 Template:TechDraw_Tools_navi/fr
+ 16.35%    4.692      2 Template:Navigation_menu_2
+ 15.16%    4.351     12 Template:Variable
+ 10.55%    3.027      1 Template:Userdocnavi/fr
+  8.88%    2.547      2 Template:Docnav/fr
+  8.73%    2.504      1 Template:GuiCommand/fr
+  8.29%    2.380      1 Template:Code
+  5.09%    1.462      1 Template:Caption
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:156944-0!canonical and timestamp 20260124112331 and revision id 1743330. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:156944-0!canonical and timestamp 20260124112438 and revision id 1743332. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
