--- a/wiki/fr/TechDraw_WeldSymbol.html
+++ b/wiki/fr/TechDraw_WeldSymbol.html
@@ -61,15 +61,13 @@
 <p><span id="Usage"></span>
 </p>
 <h2><span class="mw-headline" id="Utilisation">Utilisation</span></h2>
-<div class="mw-translate-fuzzy">
 <ol><li>S&eacute;lectionnez une <a href="../fr/TechDraw_LeaderLine.html" title="TechDraw LeaderLine/fr">ligne de rep&egrave;re</a> existante.</li>
 <li>Il y a plusieurs fa&ccedil;ons de lancer l'outil&nbsp;:
-<ul><li>Appuyer sur le bouton <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span typeof="mw:File"><a href="../index.php?title=TechDraw_WeldSymbol.svg&amp;filetimestamp=20240710145156&amp;.html" class="mw-file-description"><img src="../File/TechDraw_WeldSymbol.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a class="mw-selflink selflink">Ins&eacute;rer des informations de soudage</a></span>.</li>
-<li>S&eacute;lectionnez l'option <b>TechDraw &rarr; Symboles &rarr; <span typeof="mw:File"><a href="../index.php?title=TechDraw_WeldSymbol.svg&amp;filetimestamp=20240710145156&amp;.html" class="mw-file-description"><img src="../File/TechDraw_WeldSymbol.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Ins&eacute;rer des informations de soudage</b> du menu.</li></ul></li>
+<ul><li>Appuyer sur le bouton <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span typeof="mw:File"><a href="../index.php?title=TechDraw_WeldSymbol.svg&amp;filetimestamp=20240710145156&amp;.html" class="mw-file-description"><img src="../File/TechDraw_WeldSymbol.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a class="mw-selflink selflink">Symbole et informations de soudage</a></span>.</li>
+<li>S&eacute;lectionnez l'option <b>TechDraw &rarr; Symboles &rarr; <span typeof="mw:File"><a href="../index.php?title=TechDraw_WeldSymbol.svg&amp;filetimestamp=20240710145156&amp;.html" class="mw-file-description"><img src="../File/TechDraw_WeldSymbol.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Symbole et informations de soudage</b> du menu.</li></ul></li>
 <li>Un panneau de t&acirc;ches s'ouvre.</li>
 <li>Sp&eacute;cifiez les symboles de soudage et le texte d'accompagnement &agrave; ajouter &agrave; la ligne de rep&egrave;re.</li>
 <li>Appuyez sur le bouton <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">OK</span>.</li></ol>
-</div>
 <p><span id="Notes"></span>
 </p>
 <h2><span class="mw-headline" id="Remarques">Remarques</span></h2>
@@ -186,15 +184,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260124112438
+Cached time: 20260124112515
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.096 seconds
-Real time usage: 0.131 seconds
-Preprocessor visited node count: 820/1000000
-Post&#8208;expand include size: 28840/2097152 bytes
-Template argument size: 11498/2097152 bytes
+CPU time usage: 0.099 seconds
+Real time usage: 0.140 seconds
+Preprocessor visited node count: 819/1000000
+Post&#8208;expand include size: 28836/2097152 bytes
+Template argument size: 11494/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 2/100
 Unstrip recursion depth: 0/20
@@ -202,19 +200,19 @@ Unstrip post&#8208;expand size: 6996/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   28.695      1 -total
- 23.14%    6.641     12 Template:PropertyData
- 21.67%    6.219      1 Template:TechDraw_Tools_navi/fr
- 16.35%    4.692      2 Template:Navigation_menu_2
- 15.16%    4.351     12 Template:Variable
- 10.55%    3.027      1 Template:Userdocnavi/fr
-  8.88%    2.547      2 Template:Docnav/fr
-  8.73%    2.504      1 Template:GuiCommand/fr
-  8.29%    2.380      1 Template:Code
-  5.09%    1.462      1 Template:Caption
+100.00%   30.267      1 -total
+ 23.89%    7.232     12 Template:PropertyData
+ 17.54%    5.308      1 Template:TechDraw_Tools_navi/fr
+ 16.96%    5.134     12 Template:Variable
+ 15.87%    4.803      2 Template:Navigation_menu_2
+ 14.16%    4.287      1 Template:Userdocnavi/fr
+ 10.03%    3.037      2 Template:Docnav/fr
+  8.69%    2.629      1 Template:Code
+  8.66%    2.622      1 Template:GuiCommand/fr
+  4.91%    1.485      1 Template:Caption
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:156944-0!canonical and timestamp 20260124112438 and revision id 1743332. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:156944-0!canonical and timestamp 20260124112515 and revision id 1743334. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
