--- a/wiki/fr/TechDraw_WeldSymbol.html
+++ b/wiki/fr/TechDraw_WeldSymbol.html
@@ -24,7 +24,7 @@
 <th class="ctOdd">Emplacement du menu
 </th></tr>
 <tr>
-<td class="ctEven">TechDraw &rarr; Symboles &rarr; Symboles et informations de soudage
+<td class="ctEven">TechDraw &rarr; Symboles &rarr; Symbole et informations de soudage
 </td></tr>
 <tr>
 <th class="ctOdd">Ateliers
@@ -184,15 +184,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260124112515
+Cached time: 20260124112522
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.099 seconds
-Real time usage: 0.140 seconds
+CPU time usage: 0.114 seconds
+Real time usage: 0.144 seconds
 Preprocessor visited node count: 819/1000000
-Post&#8208;expand include size: 28836/2097152 bytes
-Template argument size: 11494/2097152 bytes
+Post&#8208;expand include size: 28834/2097152 bytes
+Template argument size: 11492/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 2/100
 Unstrip recursion depth: 0/20
@@ -200,19 +200,19 @@ Unstrip post&#8208;expand size: 6996/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   30.267      1 -total
- 23.89%    7.232     12 Template:PropertyData
- 17.54%    5.308      1 Template:TechDraw_Tools_navi/fr
- 16.96%    5.134     12 Template:Variable
- 15.87%    4.803      2 Template:Navigation_menu_2
- 14.16%    4.287      1 Template:Userdocnavi/fr
- 10.03%    3.037      2 Template:Docnav/fr
-  8.69%    2.629      1 Template:Code
-  8.66%    2.622      1 Template:GuiCommand/fr
-  4.91%    1.485      1 Template:Caption
+100.00%   35.867      1 -total
+ 22.97%    8.238      1 Template:TechDraw_Tools_navi/fr
+ 18.25%    6.546      2 Template:Navigation_menu_2
+ 17.98%    6.448     12 Template:PropertyData
+ 13.09%    4.696      1 Template:Userdocnavi/fr
+ 11.96%    4.291     12 Template:Variable
+ 10.32%    3.702      1 Template:GuiCommand/fr
+  9.00%    3.228      1 Template:Code
+  7.81%    2.801      2 Template:Docnav/fr
+  6.00%    2.153      1 Template:Caption
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:156944-0!canonical and timestamp 20260124112515 and revision id 1743334. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:156944-0!canonical and timestamp 20260124112522 and revision id 1743336. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
