--- a/wiki/fr/TechDraw_WeldSymbol.html
+++ b/wiki/fr/TechDraw_WeldSymbol.html
@@ -71,10 +71,8 @@
 <p><span id="Notes"></span>
 </p>
 <h2><span class="mw-headline" id="Remarques">Remarques</span></h2>
-<div class="mw-translate-fuzzy">
-<ul><li>Apr&egrave;s sa cr&eacute;ation, un symbole de soudage peut &ecirc;tre &eacute;dit&eacute; en double-cliquant dessus dans la <a href="../fr/Tree_view.html" class="mw-redirect" title="Tree view/fr">vue en arborescence</a></li>
+<ul><li>Apr&egrave;s sa cr&eacute;ation, un symbole de soudage peut &ecirc;tre &eacute;dit&eacute; en double-cliquant dessus dans l'<a href="../fr/Tree_View.html" title="Tree View/fr">arborescence</a></li>
 <li>Il y a un <a href="../fr/TechDraw_Preferences.html" title="TechDraw Preferences/fr">param&egrave;tre de pr&eacute;f&eacute;rence</a> pour le r&eacute;pertoire par d&eacute;faut des symboles de soudage. Vous pouvez ajouter vos propres symboles dans un r&eacute;pertoire personnel.</li></ul>
-</div>
 <p><span id="Properties"></span>
 </p>
 <h2><span id="Propri.C3.A9t.C3.A9s"></span><span class="mw-headline" id="Propri&eacute;t&eacute;s">Propri&eacute;t&eacute;s</span></h2>
@@ -184,13 +182,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260124112522
+Cached time: 20260124112625
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.114 seconds
-Real time usage: 0.144 seconds
-Preprocessor visited node count: 819/1000000
+CPU time usage: 0.090 seconds
+Real time usage: 0.139 seconds
+Preprocessor visited node count: 818/1000000
 Post&#8208;expand include size: 28834/2097152 bytes
 Template argument size: 11492/2097152 bytes
 Highest expansion depth: 7/100
@@ -200,19 +198,19 @@ Unstrip post&#8208;expand size: 6996/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   35.867      1 -total
- 22.97%    8.238      1 Template:TechDraw_Tools_navi/fr
- 18.25%    6.546      2 Template:Navigation_menu_2
- 17.98%    6.448     12 Template:PropertyData
- 13.09%    4.696      1 Template:Userdocnavi/fr
- 11.96%    4.291     12 Template:Variable
- 10.32%    3.702      1 Template:GuiCommand/fr
-  9.00%    3.228      1 Template:Code
-  7.81%    2.801      2 Template:Docnav/fr
-  6.00%    2.153      1 Template:Caption
+100.00%   39.849      1 -total
+ 21.68%    8.641      1 Template:TechDraw_Tools_navi/fr
+ 21.63%    8.621     12 Template:PropertyData
+ 13.87%    5.527      2 Template:Navigation_menu_2
+ 13.82%    5.506     12 Template:Variable
+  8.67%    3.455      1 Template:GuiCommand/fr
+  8.45%    3.368      1 Template:MenuCommand
+  8.15%    3.249      1 Template:Code
+  7.57%    3.017      1 Template:Userdocnavi/fr
+  7.17%    2.857      1 Template:Caption
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:156944-0!canonical and timestamp 20260124112522 and revision id 1743336. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:156944-0!canonical and timestamp 20260124112625 and revision id 1743338. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
