--- a/wiki/fr/TechDraw_WeldSymbol.html
+++ b/wiki/fr/TechDraw_WeldSymbol.html
@@ -123,7 +123,7 @@
 </pre></div>
 <p><span id="Svg_Symbol_Tiles"></span>
 </p>
-<h2><span class="mw-headline" id="Tuiles_symbole_Svg">Tuiles symbole Svg</span></h2>
+<h2><span class="mw-headline" id="Tuiles_symbole_SVG">Tuiles symbole SVG</span></h2>
 <p>Chaque symboles est form&eacute; par des fichiers SVG de 64x64 pixels. Des symboles suppl&eacute;mentaires peuvent &ecirc;tre cr&eacute;&eacute;s dans un programme SVG comme <a rel="nofollow" class="external text" href="https://fr.wikipedia.org/wiki/Inkscape">Inkscape</a> en utilisant l'un des symboles fournis par FreeCAD comme mod&egrave;le.
 </p><p><span typeof="mw:File"><a href="../index.php?title=Techdraw-WeldingSymbolLayoutArrow.svg&amp;filetimestamp=20190824142619&amp;.html" class="mw-file-description"><img src="../File/Techdraw-WeldingSymbolLayoutArrow.svg" decoding="async" width="128" height="123" class="mw-file-element" data-file-width="107" data-file-height="103"></a></span>
 <span typeof="mw:File"><a href="../index.php?title=Techdraw-WeldingSymbolLayoutOther.svg&amp;filetimestamp=20190824141837&amp;.html" class="mw-file-description"><img src="../File/Techdraw-WeldingSymbolLayoutOther.svg" decoding="async" width="128" height="123" class="mw-file-element" data-file-width="107" data-file-height="103"></a></span>
@@ -179,12 +179,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260124112746
+Cached time: 20260124112759
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.082 seconds
-Real time usage: 0.118 seconds
+CPU time usage: 0.102 seconds
+Real time usage: 0.147 seconds
 Preprocessor visited node count: 817/1000000
 Post&#8208;expand include size: 28834/2097152 bytes
 Template argument size: 11492/2097152 bytes
@@ -195,19 +195,19 @@ Unstrip post&#8208;expand size: 7000/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   32.067      1 -total
- 22.41%    7.187      1 Template:TechDraw_Tools_navi/fr
- 19.05%    6.108     12 Template:PropertyData
- 17.47%    5.602      2 Template:Navigation_menu_2
- 12.84%    4.116      1 Template:GuiCommand/fr
- 11.46%    3.675     12 Template:Variable
-  9.38%    3.008      2 Template:Docnav/fr
-  9.17%    2.940      1 Template:Userdocnavi/fr
-  7.72%    2.474      1 Template:Caption
-  6.86%    2.199      1 Template:Code
+100.00%   44.020      1 -total
+ 24.91%   10.966     12 Template:PropertyData
+ 17.85%    7.857      1 Template:TechDraw_Tools_navi/fr
+ 16.22%    7.141      2 Template:Navigation_menu_2
+ 15.50%    6.821     12 Template:Variable
+ 10.44%    4.595      1 Template:Userdocnavi/fr
+  8.22%    3.620      1 Template:Code
+  7.81%    3.438      2 Template:Button
+  6.88%    3.030      2 Template:Docnav/fr
+  6.85%    3.015      1 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:156944-0!canonical and timestamp 20260124112746 and revision id 1743342. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:156944-0!canonical and timestamp 20260124112759 and revision id 1743344. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
