--- a/wiki/fr/TechDraw_WeldSymbol.html
+++ b/wiki/fr/TechDraw_WeldSymbol.html
@@ -128,10 +128,10 @@
 </p><p><span typeof="mw:File"><a href="../index.php?title=Techdraw-WeldingSymbolLayoutArrow.svg&amp;filetimestamp=20190824142619&amp;.html" class="mw-file-description"><img src="../File/Techdraw-WeldingSymbolLayoutArrow.svg" decoding="async" width="128" height="123" class="mw-file-element" data-file-width="107" data-file-height="103"></a></span>
 <span typeof="mw:File"><a href="../index.php?title=Techdraw-WeldingSymbolLayoutOther.svg&amp;filetimestamp=20190824141837&amp;.html" class="mw-file-description"><img src="../File/Techdraw-WeldingSymbolLayoutOther.svg" decoding="async" width="128" height="123" class="mw-file-element" data-file-width="107" data-file-height="103"></a></span>
 </p>
-<ul><li>Chaque symbole est form&eacute; de fichiers SVG de 64x64 pixels (nominaux). Les tuiles ont en fait une "bordure" de 4px. La bordure permet d'assurer que la ligne de rep&egrave;re et le symbole se rencontrent bien.</li>
+<ul><li>Chaque symbole est form&eacute; de fichiers SVG de 64x64 pixels (nominaux). Les tuiles ont en fait une &laquo;&nbsp;bordure&nbsp;&raquo; de 4px. La bordure permet d'assurer que la ligne de rep&egrave;re et le symbole se rencontrent bien.</li>
 <li>Le symbole est dessin&eacute; en noir sur un fond transparent. La largeur du trait est de 0.5mm.</li>
-<li>La ligne de rep&egrave;re passe en dessous des symboles du c&ocirc;t&eacute; de la fl&egrave;che (voir l'image de gauche) et au-dessus des symboles de l'"autre" c&ocirc;t&eacute; (voir l'image de droite).</li>
-<li>Il n'y a pas de norme de d&eacute;nomination particuli&egrave;re autre que celle d'ajouter "Haut/Bas" &agrave; la fl&egrave;che/autres symboles lat&eacute;raux.</li></ul>
+<li>La ligne de rep&egrave;re passe en dessous des symboles du c&ocirc;t&eacute; de la fl&egrave;che (voir l'image de gauche) et au-dessus des symboles de l'&laquo;&nbsp;autre&nbsp;&raquo; c&ocirc;t&eacute; (voir l'image de droite).</li>
+<li>Il n'y a pas de norme de d&eacute;nomination particuli&egrave;re autre que celle d'ajouter &laquo;&nbsp;Haut/Bas&nbsp;&raquo; &agrave; la fl&egrave;che/autres symboles lat&eacute;raux.</li></ul>
 <p><br>
 </p>
 <div class="docnav">
@@ -179,12 +179,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260124112759
+Cached time: 20260124112917
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.102 seconds
-Real time usage: 0.147 seconds
+CPU time usage: 0.119 seconds
+Real time usage: 0.150 seconds
 Preprocessor visited node count: 817/1000000
 Post&#8208;expand include size: 28834/2097152 bytes
 Template argument size: 11492/2097152 bytes
@@ -195,19 +195,19 @@ Unstrip post&#8208;expand size: 7000/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   44.020      1 -total
- 24.91%   10.966     12 Template:PropertyData
- 17.85%    7.857      1 Template:TechDraw_Tools_navi/fr
- 16.22%    7.141      2 Template:Navigation_menu_2
- 15.50%    6.821     12 Template:Variable
- 10.44%    4.595      1 Template:Userdocnavi/fr
-  8.22%    3.620      1 Template:Code
-  7.81%    3.438      2 Template:Button
-  6.88%    3.030      2 Template:Docnav/fr
-  6.85%    3.015      1 Template:MenuCommand
+100.00%   29.945      1 -total
+ 25.82%    7.731      1 Template:TechDraw_Tools_navi/fr
+ 20.81%    6.230      2 Template:Navigation_menu_2
+ 17.44%    5.222     12 Template:PropertyData
+ 13.54%    4.055      1 Template:Userdocnavi/fr
+ 11.60%    3.474     12 Template:Variable
+  9.60%    2.874      1 Template:GuiCommand/fr
+  8.66%    2.592      2 Template:Docnav/fr
+  8.11%    2.429      1 Template:Code
+  5.03%    1.505      1 Template:Caption
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:156944-0!canonical and timestamp 20260124112759 and revision id 1743344. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:156944-0!canonical and timestamp 20260124112917 and revision id 1743346. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
